# RISCV_bootloader

./: CMakeLists.txt  README.md
.run/: emulate.run.xml
cmake/: riscv_rv32i_ilp32_eabi.cmake
lnk/: CH592.ld  flash.ld
src/: main.c  startup.s  vector.s
test/: emulate.sh
